# forge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
cli/: pyproject.toml
cli/forge_cli/: archive.py  checks.py  client.py  config.py  database_config.py  main.py  manifest.py
cli/forge_cli/commands/: delete.py  deploy.py  list_apps.py  ping.py  setup.py  start.py  stop.py  validate.py  version.py
cli/tests/: test_checks_runner.py  test_manifest_checks.py  test_manifest_database.py
docs/: ROADMAP.md
examples/fastapi-ping/: forge.json  requirements.txt
examples/fastapi-ping/app/: main.py
examples/fastapi-ping/tests/: test_ping.py
examples/nodejs-notes/: forge.json  package-lock.json  package.json
examples/nodejs-notes/prisma/: schema.prisma
examples/nodejs-ping/: forge.json  index.js  package.json
examples/nodejs-ping-ts/: .env.example  forge.json  package.json
examples/react-example/: forge.json  index.html  package.json
server/: .dockerignore  .env.example  Dockerfile  pyproject.toml
server/forge_server/: __main__.py  app_lifecycle.py  auth.py  config.py  database.py  database_config.py  deploy_runner.py  docker_runner.py  env_files.py  extract.py  main.py  migrations_runner.py  nodejs_deploy.py  storage.py
server/forge_server/templates/fastapi/: Dockerfile
server/forge_server/templates/nodejs/: Dockerfile
server/forge_server/templates/react/: Dockerfile
server/tests/: test_database.py  test_database_config.py
(+5 files in other folders)
