[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-cli"
version = "0.1.0"
description = "Forge — Personal deploy platform CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
]

[project.scripts]
forge = "forge_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["forge_cli*"]
